@@ -1,3 +1,3 @@
 #!/bin/sh
 
-exec sudo /usr/share/immunity/sudo-helper/master.py
+exec sudo /usr/share/immunity/sudo-helper/master.py "$@"
