@@ -1,8 +1,10 @@
 immunity (0.2) UNRELEASED; urgency=low
 
   * Use a private namespace.
+  * Allow executing user specified command.
+  * Change default command to /bin/sh.
 
- -- Torsten Werner <twerner@debian.org>  Sun, 15 Mar 2009 10:18:14 +0100
+ -- Torsten Werner <twerner@debian.org>  Sun, 15 Mar 2009 11:48:59 +0100
 
 immunity (0.1) experimental; urgency=low
 
